--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# Stored simulation data files
+*.hdf5
+
+#compiled python files
+*.pyc
+
 # Windows shortcuts
 *.lnk
 
